--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -17,7 +17,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{% url 'home' %}">CashTracker</a>
+            <a class="navbar-brand" href="{% url 'home' %}">CashTrack</a>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
