--- a/templates/home1.html
+++ b/templates/home1.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-	<legend>CashTracker</legend>
+	<legend>Hello Rose</legend>
 
   <div>
       {% if request.user.is_authenticated %}
