changing title from cashtrack to piggybank

--- a/templates/home1.html
+++ b/templates/home1.html
@@ -2,12 +2,14 @@
 
 {% block content %}
 
-	<legend>CashTracker</legend>
+	<legend>PiggyBank</legend>
 
   <div>
       {% if request.user.is_authenticated %}
           <h2 class="margin-base-vertical">Welcome, {{request.user}}!</h2>
           <!-- Navigation Buttons -->
+	  {% else %}
+		<h2 class="margin-base-vertical">Hi there Guest! Why don't log-in or register and join the fun!</h2>
       {% endif %}
   </div>
 
