--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,7 +1,7 @@
 <footer class="navbar-inverse navbar-fixed-bottom">
     <div>
       <ul class="nav navbar-nav">
-        <li><a href="{% url 'home' %}">CashTracker</a></li>
+        <li><a href="{% url 'home' %}">PiggyBank</a></li>
       </ul>
     </div>
 </footer>
