--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -17,7 +17,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{% url 'home' %}">CashTrack</a>
+            <a class="navbar-brand" href="{% url 'home' %}">PiggyBank</a>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -25,7 +25,7 @@
             <ul class="nav navbar-nav">
 
                 <li {% if request.path == index %} class="active" {% endif %}><a href="{% url 'home' %}"><span class="glyphicon glyphicon-home"></span><span class="hidden-md hidden-sm"> Home</span></a></li>
-				<li><a href=""><span class="glyphicon glyphicon-book"></span><span class="hidden-md hidden-sm">CashBook</span></a></li>
+				<li><a href=""><span class="glyphicon glyphicon-book"></span><span class="hidden-md hidden-sm">Your PiggyBank</span></a></li>
 			</ul>
             <ul class="nav navbar-nav navbar-right">
 				{% if user.is_staff %}
