adding log-in/registration

--- a/templates/home1.html
+++ b/templates/home1.html
@@ -9,7 +9,7 @@
           <h2 class="margin-base-vertical">Welcome, {{request.user}}!</h2>
           <!-- Navigation Buttons -->
 	  {% else %}
-		<h2 class="margin-base-vertical">Hi there Guest! Why don't log-in or register and join the fun!</h2>
+		<h2 class="margin-base-vertical">tHIS IS ONLY ON MY LAPTOP</h2>
       {% endif %}
   </div>
 
