--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,12 +1,3 @@
-{% url 'contact' as contact %}
-{% url 'home' as index %}
-{% url 'faq' as faq %}
-{% url 'about' as about %}
-{% url 'admin:index' as admin %}
-{% url 'account_logout' as logout %}
-{% url 'account_login' as login %}
-{% url 'account_signup' as register %}
-
 <nav class="navbar navbar-inverse navbar-fixed-top default-font-size">
     <div class="container-fluid">
          <!-- Brand and toggle get grouped for better mobile display -->
@@ -38,11 +29,11 @@
 
 				{% if request.user.is_authenticated %}
 					<li>
-						<a href="" ><span class="glyphicon glyphicon-log-out"></span><span class="hidden-md hidden-sm"> Log Out</span></a>
+						<a href="/accounts/logout" ><span class="glyphicon glyphicon-log-out"></span><span class="hidden-md hidden-sm"> Log Out</span></a>
 					</li>
 				{% else %}
 					<li>
-						<a href="" ><span class="glyphicon glyphicon-log-in"></span><span class="hidden-md hidden-sm"> Sign In</span></a>
+						<a href="/accounts/login" ><span class="glyphicon glyphicon-log-in"></span><span class="hidden-md hidden-sm"> Sign In</span></a>
 					</li>
 				{% endif %}
 					
