--- a/static/bootstrap/css/index.css
+++ b/static/bootstrap/css/index.css
@@ -1,8 +1,9 @@
 
 body {color: #000000; 
-		  background-color: #ffcc99;
+		  background-color: #ffebcd;
 		  font-family: Arial, Verdana, san-serif;
-		  padding-top: 80px;}
+		  padding-top: 80px;
+		  }
 		  
 
 a:link {color:#cc0066;
@@ -15,21 +16,21 @@ a:hover {color:#ffffff;
 a:visited{color:#990099;
 			text-decoration: none;
 
-			 }
+			}
 p {color:#000000;
-		  }
+			}
 ul {list-style-type: none;
 }
-h1 { color: #ff4da6;
+h1 { color: #ff80bf;
 			text-align: center;
 			font-family: 'Kavoon', cursive; 
 			font-size: 3em;
-			text-shadow: 3px 3px #000000
+			text-shadow: 2px 2px #000000
 			}
 		
-h2 {color: #000000; 
+h2 {color: #cc0066; 
 			text-align: center;
-			font-family: Arial, "Verdana", san-serif;
+			font-family: 'Kavoon', cursive;
 			line-height: 200%;
 			font-size: 1.50em;
 			}
@@ -38,11 +39,10 @@ h3 {color:#000000;
 			font-family: Arial, "Verdana", san-serif;
 			line-height:125%;
 			font-size:1.25em;
-}
+			}
+			
 table, td, th {padding: 15px;
-				 }
-#wrapper {margin-left: auto;	
-		margin-right: auto;
-		width:80%;
-}		
+		text-align: center;
+		}
+
 				 
