--- a/templates/about.html
+++ b/templates/about.html
@@ -1,10 +1,57 @@
 {% extends 'base.html' %}
 
-{% block content %}
-	<h1> PiggyBank </h1>
-	<br>
-	<br>
-	<!--This location will probably need to be updated
-	<img src="COMP730/project/templates/4052pige.jpg" height="900" width="900" alt="logo PiggyBank"> 
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>PiggyBank</title>
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.css' %}" />
+
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap-theme.css'%}">
+	
+	<link href="https://fonts.googleapis.com/css?family=Kavoon" rel="stylesheet" type='text/css'>
+
+    <!-- Own Stylesheet Comes AFTER Bootstrap 
+    <link rel="stylesheet" type="text/css" href="{% static 'bootstrap/css/starter-template.css' %}" />
 	-->
-{% endblock %}
+	
+	<link rel="stylesheet" type="text/css" href="{% static 'bootstrap/css/index.css' %}">
+	
+  </head>
+
+    <body>
+        {% include 'navbar.html' %}
+        <div class="container">
+
+            {% include 'tags/opening_div_lg.html' %}
+
+                {% block content %}
+				
+			
+				<p>
+				Jon, Gayathri and Rose are students at the University of New Hampshire at Manchester. 
+				</p>
+                {% endblock %}
+
+            {% include 'tags/closing_div_tags.html' %}
+
+        </div>
+        {% include 'footer.html' %}
+
+        <!-- Bootstrap core JavaScript
+        ================================================== -->
+        <!-- Placed at the end of the document so the pages load faster -->
+
+        <!-- jQuery library -->
+        <script src="{% static 'bootstrap/js/jquery.min.js' %}"></script>
+
+        <!-- Latest compiled JavaScript -->
+        <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
+
+    </body>
+</html>
+
