--- a/goalTracker/templates/goalTracker/addEditGoals.html
+++ b/goalTracker/templates/goalTracker/addEditGoals.html
@@ -1,14 +1,13 @@
-{% extends 'base.html'%}
+{% extends 'base.html' %}
 
 {% block content %}
-	<legend>Deposit Money to My Fund</legend>
-	
-	<div>
+<legend>addEditGoals.html</legend>
+<div>
 	<form class="horizontal">
 		<div class="form-group">
-		  <label class="col-sm-2 control-label" for="deposit">Amount:</label>
+		  <label class="col-sm-2 control-label" for="goal">Goal:</label>
 		  <div class="col-sm-10">
-			<input type="text"  class="form-control" id="deposit" required="required">
+			<input type="text"  class="form-control" id="goal" required="required" value="goal">
 			<br>
 		  </div>
 		</div>
@@ -20,13 +19,20 @@
 		<div class="form-group">
 		  <label class="col-sm-2 control-label" for="date">Date:</label>
 		  <div class="col-sm-10">
-			<input type="date"  class="form-control" id="date" required="required">
+			<input type="date"  class="form-control" id="date" required="required" >
 			<br>
 		  </div>
 		</div>
 	</form>
 	</div>
 	
+	<div class="form-group">
+		  <label class="col-sm-2 control-label" for="deposit">Amount:</label>
+		  <div class="col-sm-10">
+			<input type="text"  class="form-control" id="deposit" required="required">
+			<br>
+		  </div>
+		</div>
 	
 	<div class="form-group">
 		<label class="col-sm-2 control-label" for="comment">Comment:</label>
@@ -39,8 +45,7 @@
 	<button type="reset" class="btn btn-default">Reset</button>
 	
 	
-	
-	<h3>You have successfully deposited money to your fund!</h3>
-	
-	
- {% endblock %}
+	<h3>You have successfully created a new goal!</h3>
+
+
+{% endblock %}
