--- a/goalTracker/templates/goalTracker/goals.html
+++ b/goalTracker/templates/goalTracker/goals.html
@@ -3,12 +3,56 @@
 {% block content %}
 
 	{% if goalList %}
+	
+	<legend><h2>My Goals</h2></legend>
 
-	<div class="progress">
-  <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="{{goalList.current_saved}}"
-  aria-valuemin="0" aria-valuemax="20" style="width:40%">
-    40% Complete (success)
-  </div>
+
+<div class="container-fluid">
+	
+
+	<table class="table table-hover">
+		<tr>
+			<td>Goal 1</td>
+			<td>
+				<div class="progress">
+					<div class="progress-bar progress-bar-striped" role="progressbar" 
+						aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:40%">
+						40%"
+					</div>
+				</div>
+			</td>
+			
+		</tr>
+		<tr>
+			<td>Goal 2</td>
+			<td>
+				<div class="progress">
+					<div class="progress-bar progress-bar-striped" role="progressbar" 
+						aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:40%">
+						40%"
+					</div>
+				</div>
+			</td>
+			
+		</tr>
+		<tr>
+			<td>Goal 3</td>
+			<td>
+				<div class="progress">
+					<div class="progress-bar progress-bar-striped" role="progressbar" 
+						aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:40%">
+						40%"
+					</div>
+				</div>
+			</td>
+			
+		</tr>
+		
+	</table>
+</div>
+<div>
+	<button type="button" class="btn btn-info">Ok</button>
+	<button type="button" class="btn btn-info">Back</button>
 </div>
 
 	{% else %}
