--- a/templates/piggybank.html
+++ b/templates/piggybank.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 	<legend>piggybank.html</legend>
-	<button type="button" class="btn btn-primary"><a href="{% url 'piggybankFundAccount'%}">Fund Account</a></button><br>
+	<button type="button" class="btn btn-primary"><a href="{% url 'fundTracker:fund_account'%}">Fund Account</a></button><br>
 	<button type="button" class="btn btn-primary">My Transaction</button><br>
 	<button type="button" class="btn btn-primary">My Goals</button><br>
 	
