--- a/templates/piggybank.html
+++ b/templates/piggybank.html
@@ -4,7 +4,7 @@
 	<legend>piggybank.html</legend>
 	<button type="button" class="btn btn-primary"><a href="{% url 'fundTracker:fund_account'%}">Fund Account</a></button><br>
 	<button type="button" class="btn btn-primary">My Transaction</button><br>
-	<button type="button" class="btn btn-primary">My Goals</button><br>
+	<button type="button" class="btn btn-primary"><a href="{% url 'goalTracker:goals' %}">My Goals</button><br>
 	
  {% endblock %}
  
