--- a/fundTracker/templates/fundTracker/deposit.html
+++ b/fundTracker/templates/fundTracker/deposit.html
@@ -4,43 +4,34 @@
 	<legend>Deposit Money to My Fund</legend>
 	
 	<div>
-	<form class="horizontal">
+	<form action="" method="post" class="horizontal">
+        {% csrf_token %}
 		<div class="form-group">
 		  <label class="col-sm-2 control-label" for="deposit">Amount:</label>
 		  <div class="col-sm-10">
-			<input type="text"  class="form-control" id="deposit" required="required">
+			<input type="text"  class="form-control" name="deposit" id="deposit" required="required">
 			<br>
 		  </div>
-		</div>
-	</form>
-	</div>
-	
-	<div>
-	<form class="horizontal">
-		<div class="form-group">
-		  <label class="col-sm-2 control-label" for="date">Date:</label>
-		  <div class="col-sm-10">
-			<input type="date"  class="form-control" id="date" required="required">
-			<br>
-		  </div>
-		</div>
-	</form>
-	</div>
-	
-	
-	<div class="form-group">
-		<label class="col-sm-2 control-label" for="comment">Comment:</label>
-		<div class="col-sm-10">
-		<textarea class="form-control" rows="5" id="comment"></textarea>
-		<br>
-	</div>
-	
-	<button type="submit" class="btn btn-default">Submit</button>
-	<button type="reset" class="btn btn-default">Reset</button>
-	
-	
+        <div class="form-group">
+          <label class="col-sm-2 control-label" for="date">Date:</label>
+          <div class="col-sm-10">
+            <input type="date"  class="form-control" name="date" id="date" required="required">
+            <br>
+          </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-2 control-label" for="comment">Comment:</label>
+            <div class="col-sm-10">
+            <textarea class="form-control" rows="5" name="comment" id="comment"></textarea>
+            <br>
+        </div>
+    
+        <button type="submit" class="btn btn-default">Submit</button>
+        <button type="reset" class="btn btn-default">Reset</button>
+
+    </form>
+    </div>
 	
 	<h3>You have successfully deposited money to your fund!</h3>
-	
-	
+
  {% endblock %}
