--- a/goalTracker/templates/goalTracker/goals.html
+++ b/goalTracker/templates/goalTracker/goals.html
@@ -24,6 +24,9 @@
                     <td>
                         {{ goal.current_saved }} / {{goal.goal_amount}}
                     </td>
+                    <td>
+                        <buton type="button" class="btn btn-info"><a href="{% url 'goalTracker:edit_goal' goal.id %}">Edit</a></button>
+                    </td>
 		        </tr>        
             {% endfor %}
         </table>
