--- a/goalTracker/templates/goalTracker/goals.html
+++ b/goalTracker/templates/goalTracker/goals.html
@@ -25,7 +25,10 @@
                         {{ goal.current_saved }} / {{goal.goal_amount}}
                     </td>
                     <td>
-                        <buton type="button" class="btn btn-info"><a href="{% url 'goalTracker:edit_goal' goal.id %}">Edit</a></button>
+                        <button type="button" class="btn btn-info"><a href="{% url 'goalTracker:add_to_piggybank' goal.id %}">Add to Piggybank</a></button>
+                    </td>
+                    <td>
+                        <button type="button" class="btn btn-info"><a href="{% url 'goalTracker:edit_goal' goal.id %}">Edit</a></button>
                     </td>
 		        </tr>        
             {% endfor %}
