--- a/templates/piggybank.html
+++ b/templates/piggybank.html
@@ -3,7 +3,7 @@
 {% block content %}
 	<legend>piggybank.html</legend>
 	<button type="button" class="btn btn-primary"><a href="{% url 'fundTracker:fund_account'%}">Fund Account</a></button><br>
-	<button type="button" class="btn btn-primary"><a href="{% url 'fundTracker:add_transaction'%}">My Transaction</a></button><br>
+	<button type="button" class="btn btn-primary"><a href="{% url 'fundTracker:add_transaction'%}">Add Transaction</a></button><br>
 	<button type="button" class="btn btn-primary"><a href="{% url 'goalTracker:goals' %}">My Goals</a></button><br>
 	
  {% endblock %}
