--- a/fundTracker/templates/fundTracker/deposit.html
+++ b/fundTracker/templates/fundTracker/deposit.html
@@ -5,8 +5,10 @@
 	<legend>Deposit Money</legend>
     
     {% if success %}
-        <h3>Money deposited successfully!</h3>
-    {% endif %}	
+         <h3>You have successfully deposited money to your fund!</h3>
+    {% elif error %}
+        <h3> Error! Perhaps your transaction amount was greater than your balance <h3>
+    {% endif %}
 
 	<div>
 	<form action="" method="post" class="horizontal">
