--- a/fundTracker/templates/fundTracker/deposit.html
+++ b/fundTracker/templates/fundTracker/deposit.html
@@ -1,7 +1,7 @@
 {% extends 'base.html'%}
 
 {% block content %}
-    <legend>Your Balance: {% if fund %} {{fund.balance|floatformat:2}} {% endif %} 
+    <legend>Your Balance: ${% if fund %} {{fund.balance|floatformat:2}} {% endif %}</legend>
 	<legend>Deposit Money</legend>
     
     {% if success %}
@@ -33,8 +33,8 @@
             <br>
         </div>
     
-        <button type="submit" class="btn btn-default">Submit</button>
-        <button type="reset" class="btn btn-default">Reset</button>
+        <button type="submit" class="btn btn-secondary">Submit</button>
+        <button type="reset" class="btn btn-secondary">Reset</button>
 
     </form>
     </div>
