--- a/fundTracker/templates/fundTracker/add_transaction.html
+++ b/fundTracker/templates/fundTracker/add_transaction.html
@@ -2,13 +2,13 @@
 
 {% block content %}
 	<legend>
-        Your Balance: {% if fund %} {{ fund.balance|floatformat:2 }} {% else %} error! {% endif %}<br> 
+        Your Balance: $ {% if fund %} {{ fund.balance|floatformat:2 }} {% else %} error! {% endif %}<br> 
         Add Transaction?
     </legend>
     {% if success %}
          <h3>You have successfully deposited money to your fund!</h3>
     {% elif error %}
-        <h3> Error! Perhaps your transaction amount was greater than your balance <h3>
+        <h3> Error! Perhaps your transaction amount was greater than your balance. <h3>
     {% endif %}
 	
 	<div>
