--- a/goalTracker/templates/goalTracker/add_goal.html
+++ b/goalTracker/templates/goalTracker/add_goal.html
@@ -28,7 +28,7 @@
         {% endfor %}
     </fieldset>
     <div class="form-actions">
-        <button type="submit" class="btn btn-primary" >Submit</button>
+        <button type="submit" class="btn btn-info" >Submit</button>
     </div>
 </form>
 
