--- a/goalTracker/templates/goalTracker/edit_goal.html
+++ b/goalTracker/templates/goalTracker/edit_goal.html
@@ -32,7 +32,7 @@
                 </div>
     </fieldset>
     <div class="form-actions">
-        <button type="submit" class="btn btn-primary" >Submit</button>
+        <button type="submit" class="btn btn-info" >Submit</button>
     </div>
 </form>
 
