--- a/static/bootstrap/css/index.css
+++ b/static/bootstrap/css/index.css
@@ -10,14 +10,15 @@ a:link {color:#cc0066;
 			text-decoration: none;
 			}
 			
-a:hover {color:#ffffff;
+a:hover {color:#800040;
 			text-decoration: none;
 			}
 a:visited{color:#990099;
 			text-decoration: none;
 
 			}
-p {color:#000000;
+p {font-size: 1em;
+    color:#000000;
 			}
 ul {list-style-type: none;
 }
@@ -44,5 +45,9 @@ h3 {color:#000000;
 table, td, th {padding: 15px;
 		text-align: center;
 		}
+label {font-family: Arial, "Verdana", san-serif
+            line height:100%
+            font-size:1em;
+            }
 
 				 
