--- a/templates/piggybank.html
+++ b/templates/piggybank.html
@@ -1,10 +1,20 @@
 {% extends 'base.html' %}
 
 {% block content %}
-	<legend>piggybank.html</legend>
-	<button type="button" class="btn btn-primary"><a href="{% url 'fundTracker:fund_account'%}">Fund Account</a></button><br>
-	<button type="button" class="btn btn-primary"><a href="{% url 'fundTracker:add_transaction'%}">Add Transaction</a></button><br>
-	<button type="button" class="btn btn-primary"><a href="{% url 'goalTracker:goals' %}">My Goals</a></button><br>
+	<legend><h1>PiggyBank<h1></legend>
+   
+		
+        <p><h3>
+					Got your eye on an awesome video game? Want to see that great new movie everyone is talking about? <br><br> 
+					If you have hard time saving your money or just want to keep track of where it all goes, 
+					PiggyBank can help. You can use it to record your savings, set goals and monitor your progress toward each goal, 
+					and see what you've already bought. 
+        </p><h3>
+        	
+                
+	<button type="button" class="btn btn-info"><a href="{% url 'fundTracker:fund_account'%}">Funds</a></button>
+	<button type="button" class="btn btn-info"><a href="{% url 'fundTracker:add_transaction'%}">Add Transaction</a></button>
+	<button type="button" class="btn btn-info"><a href="{% url 'goalTracker:goals' %}">Goals</a></button><br>
 	
  {% endblock %}
  
